--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,14 +1,12 @@
 <div class="block">
   <p>Hi. My name is Pranay.</p>
-  <p>I'm a computer science grad currently working as a software engineer at <a href="https://www.shippable.com" target="_blank">Shippable.</a></p>
-  <p>I sometimes <a href="https://twitter.com/PranayPareek" target="_blank">tweet and re-tweet</a> tech-related stuff.</p>
-  <p>I frequently browse around on <a href="https://www.quora.com/Pranay-Pareek" target="_blank">Quora</a>, occasionally answering questions about Cloud Computing and Heavy Metal.</p>
-  <p>The last three books I read were:</p>
-  <p>Losing My Virginity - Sir Richard Branson<br/>
-    Ready Player One - Ernest Cline<br/>
-    The Theory of Everything - Stephen Hawking<br/>
-  </p>
-  <p><a href="http://www.whoismrrobot.com" target="_blank">Psst.</a></p>
-  <!--Max Levchin has a badass website.-->
+  <p>I'm currently pursuing Computer Science as a Master's student at NYU's <a href="http://cs.nyu.edu" target="_blank">Courant</a> Institute of Mathematical Sciences.</p>
+  <p>In the past, I've worked as a software engineer at <a href="https://www.shippable.com" target="_blank">Shippable</a> and as an intern at <a href="http://www.vmware.com" target="_blank">VMware.</a></p>
+  <p>I had the experience of a lifetime at Shippable and helped build a stellar platform with an outstanding team that's changing the world of Continuous Delivery.</p>
+  <p>My primary interest lies in Cloud Computing and Software Engineering. I also find Deep Learning fascinating and would love to learn about it in the near future.</p>
+  <p>I love listening to heavy metal and my favorite books include the <a href="https://en.wikipedia.org/wiki/Foundation_series" target="_blank">Foundation</a> Trilogy.</p>
+  <p>You can also find me on <a href="https://www.linkedin.com/in/pranaypareek" target="_blank">LinkedIn</a>, <a href="https://github.com/pranaypareek" target="_blank">GitHub</a> and <a href="https://www.quora.com/Pranay-Pareek" target="_blank">Quora.</a></p>
+  <p><a href="http://www.whoismrrobot.com" target="_blank">.</a></p>
+  <!--Max Levchin has the most badass website of all time.-->
   <p><a href="http://levchin.com/" target="_blank"></a></p>
 </div>
